<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WebApp</string>
    <string name="action_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="action_faq">FAQ</string>

    <string name="pref_web_url_def">http://ized.in/</string>
    <string name="pref_web_url_key">pref_web_url</string>
    <string name="pref_web_url_summ">Set the URL to load into the application.</string>
    <string name="pref_web_url_desc">This is the URL that will be loaded into the Application.</string>
    <string name="pref_web_url">URL</string>
    <string name="pref_web_js_key">pref_web_js</string>
    <string name="pref_web_js_summ">Enable or Disable JavaScript.</string>
    <string name="pref_web_js_desc">For security reasons it\'s better to disable JavaScript, if you do not need it.</string>
    <string name="pref_web_js">JavaScript</string>

    <string name="faq_url">https://github.com/rynr/webview/wiki/FAQ</string>
</resources>
